Update exception and ip_parser code format.

--- a/casbin/casbin.vcxproj
+++ b/casbin/casbin.vcxproj
@@ -155,7 +155,28 @@
     <ClCompile Include="config\config.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="enforcer.cpp" />
+    <ClCompile Include="exception\casbin_adapter_exception.cpp" />
+    <ClCompile Include="exception\casbin_enforcer_exception.cpp" />
+    <ClCompile Include="exception\casbin_rbac_exception.cpp" />
+    <ClCompile Include="exception\illegal_argument_exception.cpp" />
+    <ClCompile Include="exception\io_exception.cpp" />
+    <ClCompile Include="exception\missing_required_sections.cpp" />
+    <ClCompile Include="exception\unsupported_operation_exception.cpp" />
     <ClCompile Include="internal_api.cpp" />
+    <ClCompile Include="ip_parser\exceptions\ParserException.cpp" />
+    <ClCompile Include="ip_parser\parser\allFF.cpp" />
+    <ClCompile Include="ip_parser\parser\CIDRMask.cpp" />
+    <ClCompile Include="ip_parser\parser\dtoi.cpp" />
+    <ClCompile Include="ip_parser\parser\equal.cpp" />
+    <ClCompile Include="ip_parser\parser\IP.cpp" />
+    <ClCompile Include="ip_parser\parser\IPNet.cpp" />
+    <ClCompile Include="ip_parser\parser\IPv4.cpp" />
+    <ClCompile Include="ip_parser\parser\parseCIDR.cpp" />
+    <ClCompile Include="ip_parser\parser\parseIP.cpp" />
+    <ClCompile Include="ip_parser\parser\parseIPv4.cpp" />
+    <ClCompile Include="ip_parser\parser\parseIPv6.cpp" />
+    <ClCompile Include="ip_parser\parser\Print.cpp" />
+    <ClCompile Include="ip_parser\parser\xtoi.cpp" />
     <ClCompile Include="management_api.cpp" />
     <ClCompile Include="model\assertion.cpp" />
     <ClCompile Include="model\function.cpp" />
@@ -204,30 +225,33 @@
     <ClInclude Include="enforcer.h" />
     <ClInclude Include="enforcer_interface.h" />
     <ClInclude Include="error\Error.h" />
-    <ClInclude Include="exception\CasbinAdapterException.h" />
-    <ClInclude Include="exception\CasbinEnforcerException.h" />
-    <ClInclude Include="exception\CasbinRBACException.h" />
-    <ClInclude Include="exception\IllegalArgumentException.h" />
-    <ClInclude Include="exception\IOException.h" />
-    <ClInclude Include="exception\MissingRequiredSections.h" />
-    <ClInclude Include="exception\UnsupportedOperationException.h" />
-    <ClInclude Include="IPParser\exceptions\ParseException.h" />
-    <ClInclude Include="IPParser\parser\allFF.h" />
-    <ClInclude Include="IPParser\parser\byte.h" />
-    <ClInclude Include="IPParser\parser\CIDR.h" />
-    <ClInclude Include="IPParser\parser\CIDRMask.h" />
-    <ClInclude Include="IPParser\parser\dtoi.h" />
-    <ClInclude Include="IPParser\parser\equal.h" />
-    <ClInclude Include="IPParser\parser\IP.h" />
-    <ClInclude Include="IPParser\parser\IPMask.h" />
-    <ClInclude Include="IPParser\parser\IPNet.h" />
-    <ClInclude Include="IPParser\parser\IPv4.h" />
-    <ClInclude Include="IPParser\parser\parseCIDR.h" />
-    <ClInclude Include="IPParser\parser\parseIP.h" />
-    <ClInclude Include="IPParser\parser\parseIPv4.h" />
-    <ClInclude Include="IPParser\parser\parseIPv6.h" />
-    <ClInclude Include="IPParser\parser\Print.h" />
-    <ClInclude Include="IPParser\parser\xtoi.h" />
+    <ClInclude Include="exception\casbin_adapter_exception.h" />
+    <ClInclude Include="exception\casbin_enforcer_exception.h" />
+    <ClInclude Include="exception\casbin_rbac_exception.h" />
+    <ClInclude Include="exception\illegal_argument_exception.h" />
+    <ClInclude Include="exception\io_exception.h" />
+    <ClInclude Include="exception\missing_required_sections.h" />
+    <ClInclude Include="exception\pch.h" />
+    <ClInclude Include="exception\unsupported_operation_exception.h" />
+    <ClInclude Include="ip_parser\exceptions\ParserException.h" />
+    <ClInclude Include="ip_parser\exceptions\pch.h" />
+    <ClInclude Include="ip_parser\parser\allFF.h" />
+    <ClInclude Include="ip_parser\parser\byte.h" />
+    <ClInclude Include="ip_parser\parser\CIDR.h" />
+    <ClInclude Include="ip_parser\parser\CIDRMask.h" />
+    <ClInclude Include="ip_parser\parser\dtoi.h" />
+    <ClInclude Include="ip_parser\parser\equal.h" />
+    <ClInclude Include="ip_parser\parser\IP.h" />
+    <ClInclude Include="ip_parser\parser\IPMask.h" />
+    <ClInclude Include="ip_parser\parser\IPNet.h" />
+    <ClInclude Include="ip_parser\parser\IPv4.h" />
+    <ClInclude Include="ip_parser\parser\parseCIDR.h" />
+    <ClInclude Include="ip_parser\parser\parseIP.h" />
+    <ClInclude Include="ip_parser\parser\parseIPv4.h" />
+    <ClInclude Include="ip_parser\parser\parseIPv6.h" />
+    <ClInclude Include="ip_parser\parser\pch.h" />
+    <ClInclude Include="ip_parser\parser\Print.h" />
+    <ClInclude Include="ip_parser\parser\xtoi.h" />
     <ClInclude Include="log\DefaultLogger.h" />
     <ClInclude Include="log\Log.h" />
     <ClInclude Include="log\Logger.h" />
