--- a/casbin/casbin.vcxproj
+++ b/casbin/casbin.vcxproj
@@ -154,6 +154,8 @@
   <ItemGroup>
     <ClCompile Include="config\config.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="duktape\duktape.cpp" />
+    <ClCompile Include="effect\default_effector.cpp" />
     <ClCompile Include="enforcer.cpp" />
     <ClCompile Include="exception\casbin_adapter_exception.cpp" />
     <ClCompile Include="exception\casbin_enforcer_exception.cpp" />
@@ -163,7 +165,7 @@
     <ClCompile Include="exception\missing_required_sections.cpp" />
     <ClCompile Include="exception\unsupported_operation_exception.cpp" />
     <ClCompile Include="internal_api.cpp" />
-    <ClCompile Include="ip_parser\exceptions\ParserException.cpp" />
+    <ClCompile Include="ip_parser\exception\ParserException.cpp" />
     <ClCompile Include="ip_parser\parser\allFF.cpp" />
     <ClCompile Include="ip_parser\parser\CIDRMask.cpp" />
     <ClCompile Include="ip_parser\parser\dtoi.cpp" />
@@ -188,11 +190,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="persist\adapter.cpp" />
     <ClCompile Include="persist\default_watcher.cpp" />
     <ClCompile Include="persist\default_watcher_ex.cpp" />
-    <ClCompile Include="persist\file-adapter\batch_file_adapter.cpp" />
-    <ClCompile Include="persist\file-adapter\file_adapter.cpp" />
-    <ClCompile Include="persist\file-adapter\filtered_adapter.cpp" />
+    <ClCompile Include="persist\file_adapter\batch_file_adapter.cpp" />
+    <ClCompile Include="persist\file_adapter\file_adapter.cpp" />
+    <ClCompile Include="persist\file_adapter\filtered_adapter.cpp" />
     <ClCompile Include="rbac\default_role_manager.cpp" />
     <ClCompile Include="rbac\group_role_manager.cpp" />
     <ClCompile Include="rbac_api.cpp" />
@@ -217,14 +220,15 @@
     <ClInclude Include="config\config_interface.h" />
     <ClInclude Include="config\pch.h" />
     <ClInclude Include="duktape\duktape.h" />
-    <ClInclude Include="duktape\duktape_core.h" />
     <ClInclude Include="duktape\duk_config.h" />
+    <ClInclude Include="duktape\pch.h" />
     <ClInclude Include="duktape\scope.h" />
+    <ClInclude Include="effect\default_effector.h" />
     <ClInclude Include="effect\effect.h" />
     <ClInclude Include="effect\effector.h" />
+    <ClInclude Include="effect\pch.h" />
     <ClInclude Include="enforcer.h" />
     <ClInclude Include="enforcer_interface.h" />
-    <ClInclude Include="error\Error.h" />
     <ClInclude Include="exception\casbin_adapter_exception.h" />
     <ClInclude Include="exception\casbin_enforcer_exception.h" />
     <ClInclude Include="exception\casbin_rbac_exception.h" />
@@ -252,21 +256,14 @@
     <ClInclude Include="ip_parser\parser\pch.h" />
     <ClInclude Include="ip_parser\parser\Print.h" />
     <ClInclude Include="ip_parser\parser\xtoi.h" />
-    <ClInclude Include="log\DefaultLogger.h" />
-    <ClInclude Include="log\Log.h" />
-    <ClInclude Include="log\Logger.h" />
-    <ClInclude Include="log\LogUtil.h" />
-    <ClInclude Include="model\assertion.h" />
-    <ClInclude Include="model\function.h" />
-    <ClInclude Include="model\model.h" />
-    <ClInclude Include="model\pch.h" />
-    <ClInclude Include="model\scope_config.h" />
     <ClInclude Include="persist\adapter.h" />
     <ClInclude Include="persist\adapter_filtered.h" />
     <ClInclude Include="persist\batch_adapter.h" />
+    <ClInclude Include="persist\default_watcher.h" />
     <ClInclude Include="persist\default_watcher_ex.h" />
     <ClInclude Include="persist\file-adapter\batch_file_adapter.h" />
     <ClInclude Include="persist\file-adapter\file_adapter.h" />
+    <ClInclude Include="persist\file-adapter\filtered_adapter.h" />
     <ClInclude Include="persist\file-adapter\pch.h" />
     <ClInclude Include="persist\pch.h" />
     <ClInclude Include="persist\watcher.h" />
